# Shinzui

./: .drone.yml  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: Configure.cmake  Coverage.cmake  Lint.cmake  Macros.cmake  cpplint_wrapper.py
dep/: CMakeLists.txt
dep/rxterm/: terminal.hpp  utils.hpp
patches/: 01-circular_buffer-move-replace.patch
python/: Test segments intersections.ipynb
python/.ipynb_checkpoints/: Test segments intersections-checkpoint.ipynb
src/: CMakeLists.txt  main.cpp
src/boost/asio/: asio_forward.hpp
src/cluster/: cluster.hpp  cluster_element.hpp  cluster_i.hpp
src/cluster/detail/: cluster.hpp
src/database/: database.cpp  database.hpp
src/debug/: cpu.cpp  cpu.hpp  debug.hpp  queue_with_size.hpp  reactive.cpp  reactive.hpp
src/defs/: atomic_autoincrement.cpp  atomic_autoincrement.hpp  common.hpp  debug.hpp  intrusive.hpp  traits.hpp
src/executor/: abstract_work.cpp  abstract_work.hpp  executor.cpp  executor.hpp  schedulable.hpp
src/io/: packet.cpp  packet.hpp
src/map/: cell.cpp  cell.hpp  map.cpp  map.hpp  map_aware_entity.cpp  map_aware_entity.hpp  map_i.hpp  map_operation.hpp  offset.hpp  operations.hpp  quadtree.cpp  quadtree.hpp
src/map-cluster/: cluster.cpp  cluster.hpp  cluster_center.hpp  cluster_element.hpp  cluster_operation.hpp
src/map-slow-radius/: cell.hpp  map.cpp  map_aware_entity.hpp  offset.hpp
src/map-slow-radius/map-cluster/: cluster.hpp  cluster_operation.hpp
src/map/detail/: cell.hpp  map.hpp  operations.hpp
src/map/map-cluster/: cluster.cpp  cluster.hpp  cluster_center.hpp  cluster_operation.hpp
src/movement/: motion_master.cpp  motion_master.hpp  movement_generator.cpp  movement_generator.hpp
src/physics/: bounding_box.cpp  bounding_box.hpp  circular_bounding_box.cpp  circular_bounding_box.hpp  collisions_framework.cpp  collisions_framework.hpp  methods.cpp  methods.hpp  rect_bounding_box.cpp  rect_bounding_box.hpp  rotated_rect_bounding_box.cpp  rotated_rect_bounding_box.hpp  sat_collisions.cpp  sat_collisions.hpp
src/server/: client.cpp  client.hpp  server.cpp  server.hpp  server_i.hpp
src/threadpool/: threadpool.hpp
src/time/: traceable.cpp  traceable.hpp
src/transform/: fixed_transform.cpp  fixed_transform.hpp  traceable_transform.cpp  traceable_transform.hpp  transform.cpp  transform.hpp
tests/: CMakeLists.txt  entity.hpp  main.cpp
tests/map/: map_basic.cpp  map_cell.cpp
tests/mocks/: entity.hpp  server.hpp
tests/offset/: offset_basic.cpp
